refactor: updated routes
