# routes/clientCreationRequestRoutes/acceptOrRejectRoutes.ts
@@ -1,13 +1,0 @@
-import express from "express";
-import checkRoleAndPermission from "../../middleware/checkRoleAndPermission";
-import verifyToken from "../../middleware/verifyToken";
-import acceptOrRejectController from "../../controllers/clientCreationRequestController/acceptOrRejectController";
-
-
-const router = express.Router();
-
-
-router.put('/:id_client', verifyToken, checkRoleAndPermission(["ADMINISTRADOR"]), acceptOrRejectController);
-
-
-export default router;
