# routes/clientRoutes/register_client.ts
@@ -1,14 +1,0 @@
-import express from "express";
-import registerClientValidator from '../../middleware/clientMiddleware/registerClientValidator';
-import registerClientController from '../../controllers/clientControllers/register-client-controller';
-import verifyToken from "../../middleware/verifyToken";
-import checkRoleAndPermission from "../../middleware/checkRoleAndPermission";
-
-
-const router = express.Router();
-
-
-router.post('/', verifyToken, checkRoleAndPermission(["ADMINISTRADOR"]), registerClientValidator.validatorParams, registerClientValidator.validator, registerClientController);
-
-
-export default router;
